# tescmd

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: api-costs.md  architecture.md  authentication.md  bot-integration.md  commands.md  development.md  faq.md  mcp.md  openclaw.md  setup.md  vehicle-command-protocol.md
scripts/: validate_api_coverage.py  validate_fleet_api.py
skills/tescmd/: SKILL.md
spec/: fleet_api_spec.json
src/tescmd/: __init__.py
tests/_internal/: test_async_utils.py  test_vin.py
tests/api/: test_client.py  test_command_api.py  test_energy_api.py  test_sharing_api.py  test_signed_command.py  test_vehicle_api.py
tests/auth/: test_oauth.py  test_oauth_extended.py  test_server.py  test_token_store.py
tests/cache/: test_response_cache.py
tests/cli/: _debug_limit.py  conftest.py  test_auth.py  test_auth_exec.py  test_bugfixes.py  test_charge_exec.py  test_climate_exec.py  test_energy_exec.py  test_media_exec.py  test_nav.py  test_nav_exec.py  test_raw_exec.py  test_security_exec.py  test_serve_port.py  test_setup.py  test_sharing.py  test_sharing_exec.py  test_software_exec.py  test_status_exec.py  test_trunk_exec.py  test_user_exec.py  test_vehicle_exec.py  test_vehicle_power_exec.py  test_wake_confirmation.py
tests/deploy/: test_github_pages.py  test_tailscale_serve.py
tests/integration/: test_serve.py
tests/mcp/: test_server.py  test_tools.py
tests/models/: test_auth.py  test_config.py
tests/openclaw/: test_bridge.py  test_config.py  test_emitter.py  (+4 more)
(+101 files in other folders)
