[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tescmd"
version = "0.1.0"
description = "A Python CLI for querying and controlling Tesla vehicles via the Fleet API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "oceanswave" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "keyring>=25.0",
    "python-dotenv>=1.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
ble = ["bleak>=0.22"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "build>=1.0",
]

[project.scripts]
tescmd = "tescmd.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tescmd"]

[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "SIM", "TCH", "RUF",
]

[tool.mypy]
strict = true
python_version = "3.11"
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
